# jsmn_util

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/cnn/: example_cnn.c  example_cnn.json
inc/: jsmn_util.h  json_query.h  json_tree.h
src/: jsmn_util.c  json_query.c  json_tree.c
